src/test/fail/excep_in_anonymous.ly
<@lily 
function f():nil {
    object o = 10
    string s = o.@(string)
}

list[function():nil] function_list = [m, m, m]
function_list[0]()
@>
